# rtsp-wasm-player

./: .gitignore  CMakeLists.txt  CPPLINT.cfg  LICENSE  Makefile  README.md
cmake/: detect_gl.cmake  global.cmake
cmake/global/: macros.cmake
cmake/modules/: FindGLFW3.cmake
common/: CPPLINT.cfg  stream.cc  stream_video.cc  stream_video.h  throw_error.h
common/gl/: CPPLINT.cfg  glfw_base.cc  glfw_base.h  glfw_base_types.h  glfw_frame.h  shader.h  texture.h
common/media/: stream.cc  stream.h  stream_def.cc  stream_def.h  stream_thread.cc  stream_thread.h  stream_video.cc  stream_video.h
common/net/: asio.hpp  beast.hpp  cors.h  event.h  ext.h  json.h  packet.h
common/util/: blocking_queue.h  bytes.h  config.h  event.h  json.h  log.h  logext.h  logger.h  options.h  ptr.h  rate.h  strings.h  throw_error.h  times.h
common/ws/: data.h
data/: .gitignore  README.md  ffserver.conf
rtsp-local-player/: CMakeLists.txt  CPPLINT.cfg  cfg_file.yaml  cfg_rtsp.yaml  cfg_webcam.yaml  glfw_demo.cc  main_ui_with_opencv.cc  main_ui_with_opengl.cc
rtsp-ws-proxy/: .gitignore  CMakeLists.txt  CPPLINT.cfg  Makefile  config.yaml  main.cc  stream_filter.cc  stream_filter.h  stream_handler.cc  stream_handler.h  stream_player.cc  stream_player.h  stream_video_encoder.cc  stream_video_encoder.h  ws_def.h  ws_ext.cc  ws_ext.h  ws_server.cc  ws_server.h  ws_server_def.h  ws_server_plain.cc  ws_server_plain.h  ws_server_ssl.cc  ws_server_ssl.h  ws_session.h  ws_stream_room.cc  ws_stream_room.h  ws_stream_server.cc  ws_stream_server.h  ws_stream_session.cc  ws_stream_session.h
rtsp-ws-proxy/chat/: CMakeLists.txt  chat_room.cc  chat_room.h  chat_server.cc  chat_server.h  chat_session.cc  chat_session.h  config.yaml  main.cc
rtsp-ws-proxy/ffmpeg/: CMakeLists.txt  encode_video.c  stream_encode_video.cc
ws-local-player/: CMakeLists.txt  Makefile  config.yaml  http_client.cc  http_client.h  main.cc  ws_client.cc  ws_client.h  ws_stream_client.cc  ws_stream_client.h
ws-local-player/chat/: CMakeLists.txt  config.yaml  main.cc
ws-wasm-player/: http_server.py  index.html
ws-wasm-player/lib/: decoder.js  decoder.wasm  webgl.js  ws_client.js
ws-wasm-player/samples/: .gitignore  Makefile  hello_sdl.cc
ws-wasm-player/src/: decoder.cc  decoder.h  frame.h  log.h  main.cc  player.h
